# ChangeLog for media-video/avifile
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.76 2004/10/06 22:04:33 eradicator Exp $

  06 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/avifile-0.7.41.20041001-sparc.patch,
  avifile-0.7.41.20041001.ebuild:
  Recreated sparc patch.  Readded to ~amd64 and ~sparc.  Closes bug #66422.

  06 Oct 2004; Patrick Kursawe <phosphan@gentoo.org> files/throw.patch:
  Patch was broken (bug #64893)

  06 Oct 2004; Patrick Kursawe <phosphan@gentoo.org> +files/throw.patch,
  avifile-0.7.41.20041001.ebuild:
  Fixing wrong attribute locations in source, see bug #64893

  06 Oct 2004; Patrick Kursawe <phosphan@gentoo.org>
  avifile-0.7.41.20041001.ebuild:
  Filtering flag -momit-leaf-frame-pointer (bug #66445)

*avifile-0.7.41.20041001 (05 Oct 2004)

  05 Oct 2004; Patrick Kursawe <phosphan@gentoo.org>
  +avifile-0.7.41.20041001.ebuild:
  New version that works with xvid 1.x and does not unset compiler flags.

*avifile-0.7.38.20030710-r1 (12 Jul 2004)

  12 Jul 2004; Mike Frysinger <vapier@gentoo.org>
  +avifile-0.7.38.20030710-r1.ebuild:
  Make sure pkgconfig file spits out right include path #53183 by Luke Worth and
  clean up the ebuild in general.

  29 May 2004; Travis Tilley <lv@gentoo.org> +files/avifile-x86-gcc34.patch,
  avifile-0.7.38.20030710.ebuild:
  added an additional gcc 3.4 fix for x86

  03 May 2004; Jeremy Huddleston <eradicator@gentoo.org>
  avifile-0.7.32.20030219.ebuild, avifile-0.7.37.20030522-r2.ebuild,
  avifile-0.7.38.20030710.ebuild:
  Changing mad dep to madplay.

  28 Apr 2004; Travis Tilley <lv@gentoo.org> +files/avifile-gcc34.patch,
  avifile-0.7.38.20030710.ebuild:
  patched to compile using gcc 3.4

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org>
  avifile-0.7.37.20030522-r2.ebuild, avifile-0.7.38.20030710.ebuild:
  Add inherit eutils

  29 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>;