@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 8ce46fee9d0777836c4094372d1f089f ChangeLog 13307
+MD5 8c760b03a9e5a7c0883b9096ab4f1e3a ChangeLog 13322
 MD5 ab24ec7446ec73e983a093e98b7f99df avifile-0.7.32.20030219.ebuild 4062
 MD5 f003a1fc700f9a79cf12c06d2ac3bedd avifile-0.7.37.20030522-r2.ebuild 4432
 MD5 6d85afc659f23bb2adcebd144400833d avifile-0.7.38.20030710.ebuild 4488
 MD5 76b95bd390c69f39e5e7b028b3ff69a5 metadata.xml 272
 MD5 b80546f1e5f52f38abec15e91478e999 avifile-0.7.38.20030710-r1.ebuild 4008
-MD5 406caaf7f06fce66335fcc20cb259181 avifile-0.7.41.20041001.ebuild 3798
+MD5 e6f7edcd76e57049f94f2d4ca33b9797 avifile-0.7.41.20041001.ebuild 3857
 MD5 8390bf9de24635d667a5724c2cc0cbe9 files/avifile-0.7.37.20030522-divx.patch 11943
 MD5 7a55e6cb72df715c9b822505d5b4b8b0 files/avifile-0.7.38.20030710-2.6.patch 2038
 MD5 624ac61f6a4fb9ed9700a7496f2827cb files/avifile-0.7.38.20030710-amd64.patch 466
@@ -25,7 +25,7 @@ MD5 d0f665d4394d9d9a59c9a5dadeb09882 files/avifile-0.7.41.20041001-sparc.patch 1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFBZGv8ArHZZzCEUG0RArkFAJ9zyR8NRE+JF39zYrU5PYUcsX7j0gCeOQTb
-ukc4LUSSjnMih8t8d/EUUAI=
-=K46O
+iD8DBQFBZHGNArHZZzCEUG0RAvPcAJ9xHUAD1/SqbylaNB6VcbcjEpwe1ACggaQy
+dWBLQHa7i0Pwzsoarg8Ye9o=
+=I4FI
 -----END PGP SIGNATURE-----
