@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/avifile-0.7.41.20041001.ebuild,v 1.4 2004/10/06 22:04:33 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/avifile-0.7.41.20041001.ebuild,v 1.5 2004/10/06 22:28:04 eradicator Exp $
 
 inherit eutils flag-o-matic
 
@@ -15,7 +15,9 @@ SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0.7"
-KEYWORDS="~alpha ~amd64 ~ia64 ~sparc ~x86"
+
+#-sparc: 0.7.41 - dsputil_init_vis undefined - eradicator
+KEYWORDS="~alpha ~amd64 ~ia64 -sparc ~x86"
 IUSE="3dnow X alsa avi debug dvd esd mmx oggvorbis qt sdl sse static truetype xv zlib"
 
 DEPEND=">=media-libs/jpeg-6b
